[package]
name = "morphia"
version = "0.1.0"
edition = "2021"

[dependencies]
num-bigint = { version = "0.4", features = ["rand","serde"] }
num-traits = "0.2"
num-integer = "0.1"
rand = "0.8"
clap = { version = "4.4", features = ["derive"] }
chrono = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rsa = "0.9.2"

[lints.rust]
unused_imports = "allow"